tests/errors/semantic/blocking/OPENMP_parallel_for_check.py
# Statement after OMP_Parallel_Construct must be a for loop.
# pylint: disable=missing-function-docstring, missing-module-docstring


#$ omp parallel for
x = 50
